<resources>
    <string name="app_name">형량도서관</string>

    <!-- for bottom navigation menu -->
    <string name="category">메뉴</string>
    <string name="home">홈</string>
    <string name="scrap">스크랩</string>
    <string name="user">마이페이지</string>

    <!-- for category fragment -->
    <!-- TODO rename -->
    <string-array name="bottom_navigation_category">
        <item>살인</item>
        <item>폭행</item>
        <item>사기</item>
        <item>마약</item>
        <item>절도</item>
        <item>강간</item>
        <item>아동학대</item>
    </string-array>

    <!-- for user activity -->
    <string name="modify">회원 정보 수정</string>
    <string name="suggestions">건의사항</string>
    <string name="notifications">공지사항</string>
    <string name="sign_out">로그아웃</string>
    <string name="application_version">Application version 1.0.0</string>
    <string name="id">ID</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="application_email">judgement@google.com</string>

    <!-- for spinner in Search Result Activity -->
    <string-array name="spinner">
        <item>최신순</item>
        <item>조회순</item>
    </string-array>

    <string name="search_hint">원하는 키워드를 검색하세요.</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>

    <string name="original">더 자세한 판례 정보를 원한다면? <b><u>판례 원문 보기</u></b></string>

</resources>