<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.example.judgement.view.main.user.UserFragment" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.user.UserFragment">

        <!-- top -->
        <TextView
            android:id="@+id/txt_user_title"
            android:text="@string/user"
            style="@style/HeadFontStyle"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- profile -->
        <LinearLayout
            android:id="@+id/linear_layout_user_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/txt_user_title">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:src="@color/light_gray"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/main_color"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txt_user_name"
                style="@style/MiddleFontStyle"
                tools:text="홍길동"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- menu -->
        <LinearLayout
            android:id="@+id/linear_layout_user_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/TextPadding"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_user_profile">

            <TextView
                android:id="@+id/txt_user_modify"
                android:text="@string/modify"
                style="@style/NormalFontStyleWithBorder"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_user_suggestions"
                android:text="@string/suggestions"
                style="@style/NormalFontStyleWithBorder"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_user_notifications"
                android:text="@string/notifications"
                style="@style/NormalFontStyleWithBorder"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_user_sign_out"
                android:text="@string/sign_out"
                style="@style/NormalFontStyleWithBorder"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_user_app_version"
            android:text="@string/application_version"
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextPadding"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>