<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.example.judgement.view.main.user.UserInfoEditFragment" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.main.user.UserInfoEditFragment">

        <!-- top -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_edit_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_edit_back"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/txt_edit_title"
                android:text="@string/modify"
                style="@style/HeadFontStyle"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- profile -->
        <LinearLayout
            android:id="@+id/linear_layout_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_edit_top">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_edit"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/light_gray"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/txt_edit_name"
                style="@style/MiddleFontStyle"
                tools:text="홍길동"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- contents -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_edit_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_edit_profile">

            <TextView
                android:id="@+id/txt_edit_id"
                android:text="@string/id"
                style="@style/MiddleFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.15"/>

            <TextView
                android:id="@+id/txt_edit_user_id"
                style="@style/MiddleFontStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/txt_edit_id"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="hongildong" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/main_color"
            app:helperTextTextColor="@color/main_color"
            app:hintTextColor="@color/main_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_input_edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                style="@style/TextInputEdittextStyle"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_pwd_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:boxStrokeColor="@color/main_color"
            app:helperTextTextColor="@color/main_color"
            app:hintTextColor="@color/main_color"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_input_edit_pwd_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password Check"
                android:inputType="textPassword"
                style="@style/TextInputEdittextStyle"/>

        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_email"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/main_color"
                app:helperTextTextColor="@color/main_color"
                app:hintTextColor="@color/main_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_input_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="E-mail"
                    android:layout_marginRight="15dp"
                    android:inputType="textEmailAddress"
                    style="@style/TextInputEdittextStyle"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_email_check"
                android:layout_width="101dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#17233C"
                android:text="중복확인"
                android:textColor="#FFFFFF"
                android:textSize="12dp"

                tools:ignore="MissingConstraints" />
    </LinearLayout>

        <!-- below -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txt_edit_ok"
                android:text="@string/ok"
                style="@style/MiddleFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/txt_edit_cancel"
                android:text="@string/cancel"
                style="@style/MiddleFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>